# data-conf

./: .gitignore  README.md  subst.sh  subst1.sh
.git_old/: COMMIT_EDITMSG  HEAD  config  index  index (Todd Kushner's conflicted copy 2023-09-16)  packed-refs
.git_old/logs/: HEAD  HEAD (Todd Kushner's conflicted copy 2023-09-16)
src/: CMakeLists.txt  INSTALL.md  INSTALL_new.md  INSTALL_prev.md  INSTALL_windows.md  README.md  todo.txt
src/apps/: dconf_app.cpp
src/bdb-lib/: bdb_cursor.hpp  bdb_dao.hpp  bdb_databases_config.cpp  bdb_db.cpp  bdb_inet_socket_server.cpp  bdb_json_utils.hpp
src/dconf-lib/: CMakeLists.txt  account_dao.hpp  account_dto.hpp  dconf_bdb_keys.cpp  dconf_bdb_keys.hpp  dconf_dto.hpp  dconf_global.cpp  dconf_global.hpp  dconf_inet_app_init.cpp  dconf_inet_app_init.hpp  dconf_request.cpp  dconf_request.hpp  dconf_request_handlers.cpp  dconf_request_handlers.hpp  item_dao.cpp  item_dao.hpp  item_dto.cpp  item_dto.hpp  order_dao.cpp  order_dao.hpp  order_dto.cpp  order_dto.hpp  order_item_dao.cpp  order_item_dao.hpp  order_item_dto.cpp  order_item_dto.hpp
src/docker/: .gitignore  Dockerfile  bdb_databases.json  build.sh  build_api.sh  dconf_app.sh  publish.sh  req_api.sh  run_api.sh
src/history/: HISTORY.md
src/json/: account_load.json  account_lookup.json  account_match_username.json  account_select_all.json  account_select_all_for_email.json  account_update.json  bdb_databases.json  item_load.json  item_lookup.json  item_match_name.json  item_select_all.json  item_select_all_for_cost.json  item_select_all_for_name.json  item_update.json  (+13 more)
(+91 files in other folders)
