add_library(dconf-lib STATIC
        account_dao.cpp
        account_dao.hpp
        account_dto.cpp
        account_dto.hpp
        item_dao.cpp
        item_dao.hpp
        item_dto.cpp
        item_dto.hpp
        order_item_dao.cpp
        order_item_dao.hpp
        order_item_dto.cpp
        order_item_dto.hpp
        order_dao.cpp
        order_dao.hpp
        order_dto.cpp
        order_dto.hpp
        dconf_bdb_keys.cpp
        dconf_bdb_keys.hpp
        dconf_dto.hpp
        dconf_global.cpp
        dconf_global.hpp
        dconf_inet_app_init.cpp
        dconf_inet_app_init.hpp
        dconf_request.cpp
        dconf_request.hpp
        dconf_request_handlers.cpp
        dconf_request_handlers.hpp
        )
target_include_directories(dconf-lib PUBLIC .)
